* configure.ac: Warn if GDL2 isn't found. 	* configure: Regenerate.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@28213 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-04-14  David Ayers  <ayers@fsfe.org>
+
+	* configure.ac: Warn if GDL2 isn't found.
+	* configure: Regenerate.
+	
 2009-04-07  David Ayers  <ayers@fsfe.org>
 
 	* GSWeb.framework/GSWeb.h (GSWImageInfo): Foward declare.
