--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 2009-06-12  David Wetzel <dave@turbocat.de>
+    GSWAdaptors/Apache2/GNUmakefile.in
+    * added -g to include debug info as default
+
+2009-06-12  David Wetzel <dave@turbocat.de>
     GSWAdaptors/Apache2/mod_gsw.c:
     * removed unused read_sock()
     * reformated read_sock_line()
