changed flags, clean now
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@30146 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-04-14  David Wetzel <dave@turbocat.de>
+    Apache2/GNUmakefile.in
+    * changed flags, clean now
+
 2010-01-20  David Wetzel <dave@turbocat.de>
     GSWeb.framework/GSWApplication.m
     * added _setHostAddress:, hostAddress 
