added NSObject+XML for monitor support
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@30166 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,7 @@
     * small cleanups
     * GSWUtils.m EONull -> NSNull
     * GSWApplication+Defaults.m, GSWPrivate.h additions for Monitoring
+    * added NSObject+XML.?
 
 2010-04-14  David Wetzel <dave@turbocat.de>
     Apache2/GNUmakefile.in
