* Many warnings fixed. * Removed GDL dependency. * NSKeyValueCoding is now MacOS X compatible.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@30172 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-04-16  David Wetzel <dave@turbocat.de>
+    GSWeb.framework
+    * Many warnings fixed.
+    * Removed GDL dependency.
+    * NSKeyValueCoding is now MacOS X compatible.
+         
 2010-04-15  David Wetzel <dave@turbocat.de>
     new GSWDatabase Framework for EOF/GDL based applications
     not tested yet!
