* fixed memory leak * ported to OS X (beta) * depricated GSW naming
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@30215 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
 2010-04-16  David Wetzel <dave@turbocat.de>
+    * fixed memory leak
+    * ported to OS X (beta)
+    * depricated GSW naming
+    
+2010-04-16  David Wetzel <dave@turbocat.de>
     GSWeb.framework
     * Many warnings fixed.
     * Removed GDL dependency.
