--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,18 @@
 2010-04-16  David Wetzel <dave@turbocat.de>
+    GSWApplication.*:
+    * use [[NSThread currentThread] threadDictionary]
+    GSWMultiKeyDictionary.m
+    * fix format
+    GSWRequest.m
+    * fix potential double release
+    GSWComponentRequestHandler.*
+    * add comments for rejectFavicon
+    GSWSessionTimeOutManager.m
+    * fix index
+    NSString+HTML.m, GSWBaseParser.m, GSWDeclarationParser.m, GSWHTMLRawParser.m
+    * use NSZoneMalloc()
+
+2010-04-16  David Wetzel <dave@turbocat.de>
     * fixed memory leak
     * ported to OS X (beta)
     * depricated GSW naming
