--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-04-23  David Wetzel <dave@turbocat.de>
+    Examples/hello/INSTALL
+    * updated to flags really needed
+    
 2010-04-16  David Wetzel <dave@turbocat.de>
     GSWApplication.*:
     * use [[NSThread currentThread] threadDictionary]
