* Examples/hello/GNUmakefile check for platform and use frameworks or libs
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@30571 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-05-04  David Wetzel <dave@turbocat.de>
+	* Examples/hello/GNUmakefile
+	check for platform and use frameworks or libs
+	
 2010-05-03  David Wetzel <dave@turbocat.de>
         * config.h.in
         changed RCS_ID to avoid warnings
