* GSWeb.framework/GSWApplication.m 	fixed typo in include 	* GSWeb.framework/GSWString.m 	removed unused IMP caching
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@30585 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,10 @@
 2010-05-05  David Wetzel <dave@turbocat.de>
+	* GSWeb.framework/GSWApplication.m
+	fixed typo in include
+	* GSWeb.framework/GSWString.m
+	removed unused IMP caching
+	
+2010-05-05  David Wetzel <dave@turbocat.de>
 	* GSWExtensionsGSW.framework/GSWFileUploadComponent.m
 	* GSWExtensionsGSW.framework/GSWLogin.m
 	removed logs
