* Examples/hello/Main.m GSW* -> WO* * Examples/hello/HelloPage.h * Examples/hello/Main.h wrap headers in #ifdef
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@30642 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2010-06-09  David Wetzel <dave@turbocat.de>
+	* Examples/hello/Main.m
+	GSW* -> WO*
+	* Examples/hello/HelloPage.h
+	* Examples/hello/Main.h
+	wrap headers in #ifdef
+	
 2010-06-07  David Wetzel <dave@turbocat.de>
 	* GSWeb.framework/GSWComponent.m
 	validateTakeValue: forKeyPath:
