--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-06-11  David Wetzel <dave@turbocat.de>
+	* Testing/DynamicElements
+	Ported to WO names.
+	
 2010-06-10  David Wetzel <dave@turbocat.de>
 	* GSWeb.framework/GNUmakefile
 	* GSWeb.framework/WOKeyValueUnarchiver.m/h
