use [GSMimeDocument encodingFromCharset:]
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@30783 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -18,6 +18,8 @@
 	* GSWeb/GSWBundle.m
 	use [GSMimeDocument encodingFromCharset:encodingObject]
 	not + encodingNamed (which we trashed above)
+	* GSWeb/NSDictionary+HTML.m
+	use [GSMimeDocument encodingFromCharset:]
 	
 2010-06-17  David Wetzel <dave@turbocat.de>
 	* GSWAdaptors/Apache2/mod_gsw.c
