* GSWeb/GSWResourceManager.h * GSWeb/GSWComponent.h disable GS_ATTRIB_DEPRECATED until a solution is found
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@30813 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-06-22  David Wetzel <dave@turbocat.de>
+	* GSWeb/GSWResourceManager.h
+	* GSWeb/GSWComponent.h
+	disable GS_ATTRIB_DEPRECATED until a solution is found
+
 2010-06-21  David Wetzel <dave@turbocat.de>
 	* GSWExtensions/GSWPageRestorationErrorPage.gswc/GSWPageRestorationErrorPage.gswd
 	* GSWExtensions/GSWSessionCreationErrorPage.gswc/GSWSessionCreationErrorPage.gswd
