* GSWExtensions/Resources/Info-gnustep.plist * GSWExtensions/GNUmakefile fix framework name to be able to load files from the right bundle
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@30823 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ 2010-06-22  David Wetzel <dave@turbocat.de>
+	* GSWExtensions/Resources/Info-gnustep.plist
+	* GSWExtensions/GNUmakefile
+	fix framework name to be able to load files from the right bundle
+
 2010-06-22  David Wetzel <dave@turbocat.de>
 	* GSWeb/GSWResourceManager.m
 	split names into pathExtension and name before feeding it into NSBundle.
