* GSWExtensions/Resources/Info-gnustep.plist delete * GSWExtensions/GNUmakefile let makefiles generate Info-gnustep.plist
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@30825 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,10 @@
- 2010-06-22  David Wetzel <dave@turbocat.de>
+2010-06-22  David Wetzel <dave@turbocat.de>
+	* GSWExtensions/Resources/Info-gnustep.plist
+	delete
+	* GSWExtensions/GNUmakefile
+	let makefiles generate Info-gnustep.plist
+
+2010-06-22  David Wetzel <dave@turbocat.de>
 	* GSWExtensions/Resources/Info-gnustep.plist
 	* GSWExtensions/GNUmakefile
 	fix framework name to be able to load files from the right bundle
