* GSWeb/GSWResourceManager.m make url prefix dynamic based on [request _applicationURLPrefix]
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@30827 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 2010-06-22  David Wetzel <dave@turbocat.de>
+	* GSWeb/GSWResourceManager.m
+	make url prefix dynamic based on [request _applicationURLPrefix]
+
+2010-06-22  David Wetzel <dave@turbocat.de>
 	* GSWExtensions/Resources/Info-gnustep.plist
 	delete
 	* GSWExtensions/GNUmakefile
