* GSWAdaptors/Apache2/mod_gsw.c         modified find_app_by_name() wen dealing with single instances         include image         include some css
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@33034 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2011-05-13  David Wetzel <dave@turbocat.de>
+	* GSWAdaptors/Apache2/mod_gsw.c
+	modified find_app_by_name() wen dealing with single instances
+	include image
+	include some css
+
 2010-10-24  David Wetzel <dave@turbocat.de>
 	* GSWeb/GSWContext.h
 	add @class GSWResourceManager
