add GSWDatabase/Makefile.preamble patch from Sebastian Reitenbach
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@36236 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 2013-03-01  David Wetzel <dave@turbocat.de>
+	add GSWDatabase/Makefile.preamble patch from Sebastian Reitenbach
+	
+2013-03-01  David Wetzel <dave@turbocat.de>
 	* configure.ac
 	* GSWeb/GSWUtils.m
 	* GSWeb/GSWApplication+Defaults.m
