--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 2013-03-02 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
+	* GSWeb/GSWSessionTimeOutManager.h
+	  GSWSessionTimeOutManager conforms to NSLocking protocol
+
+2013-03-02 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
 	* regenerate configure from configure.ac
 
 2013-03-02  David Wetzel <dave@turbocat.de>
