* GSWeb/GSWUtils.m           NS(U)Integer conversions
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@36246 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,8 @@
 	* GSWeb/GSWResourceManager.m
 	* GSWeb/GSWResourceRequestHandler.m
 	  get rid of extaneous parentheses on equality tests
+	* GSWeb/GSWUtils.m
+	  NS(U)Integer conversions
 
 2013-03-02 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
 	* regenerate configure from configure.ac
