* GSWeb/GSWResourceManager.m         * GSWeb/GSWHTMLStaticElement.m           do not use redundant stringWithString:
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@36247 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,9 @@
 	  get rid of extaneous parentheses on equality tests
 	* GSWeb/GSWUtils.m
 	  NS(U)Integer conversions
+	* GSWeb/GSWResourceManager.m
+	* GSWeb/GSWHTMLStaticElement.m
+	  do not use redundant stringWithString:
 
 2013-03-02 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
 	* regenerate configure from configure.ac
