* GSWDatabase/WODisplayGroup.h         * GSWDatabase/WODisplayGroup.m         * GSWExtensions/GSWCollapsibleComponentContent.h         * GSWExtensions/GSWCollapsibleComponentContent.m         * GSWExtensions/GSWDictionaryRepetition.m         * GSWeb/GSWRequest.m           make the methods in the interface match the           methods in the implementation
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@36252 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2013-03-03 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
+	* GSWDatabase/WODisplayGroup.h
+	* GSWDatabase/WODisplayGroup.m
+	* GSWExtensions/GSWCollapsibleComponentContent.h
+	* GSWExtensions/GSWCollapsibleComponentContent.m
+	* GSWExtensions/GSWDictionaryRepetition.m
+	* GSWeb/GSWRequest.m
+	  make the methods in the interface match the 
+	  methods in the implementation
+
 2013-03-02 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
 	* GSWeb/GSWSessionTimeOutManager.h
 	  GSWSessionTimeOutManager conforms to NSLocking protocol
