* GSWeb/NSString+HTML.m         * GSWeb/GSWDeclarationParser.m           make inline functions static to please clang
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@36665 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-05-27: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
+	* GSWeb/NSString+HTML.m
+	* GSWeb/GSWDeclarationParser.m
+	  make inline functions static to please clang
 2013-03-04  David Wetzel <dave@turbocat.de>
 	* GSWExtensions/GSWLongResponsePage.m
 	* GSWDatabase/WODisplayGroup.m
