* GSWeb/GSWContext.m           remove useless comparison         * GSWeb/GSWDeclarationParser.m           fix some format strings and variables used in there         * Add method to interface and remove a cast           from bug report 39088
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@36680 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2013-05-30: Graham Lee <iamleeg@gmail.com>
+	* GSWeb/GSWContext.m
+	  remove useless comparison
+	* GSWeb/GSWDeclarationParser.m
+	  fix some format strings and variables used in there
+	* Add method to interface and remove a cast
+	  from bug report 39088
+
 2013-05-29: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
 	* GSWeb/GNUmakefile
 	* GSWeb/GSWProcFS.m
