* GSWeb/GSWElement.h           @class not needed after including full header of that class
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@36681 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-05-30: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
+	* GSWeb/GSWElement.h
+	  @class not needed after including full header of that class
+
 2013-05-30: Graham Lee <iamleeg@gmail.com>
 	* GSWeb/GSWContext.m
 	  remove useless comparison
