--- a/ChangeLog
+++ b/ChangeLog
@@ -6,9 +6,11 @@
 	  environment, uses a private GSFileHandle class
 	* GSWeb/GSWApplication.[h|m]
 	* GSWeb/GSWComponentRequestHandler.m
-	* GSWeb/GSWMultiKeyDictionary.m
 	  make _globalLock a NSRecursiveLock to fix problem
 	  I introduced with SVN rev 36250, fixes bug 39092
+	* GSWeb/GSWMultiKeyDictionary.m
+	  Explicitly create a NSMutableDicitonary, see bug
+	  39088
 
 2013-05-30: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
 	* GSWeb/GSWElement.h
