Fix a format string
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@36689 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,8 @@
 	* GSWeb/GSWMultiKeyDictionary.m
 	  Explicitly create a NSMutableDicitonary, see bug
 	  39088
+	* GSWeb/GSWProcFS.m
+	  fix a format string
 
 2013-05-30: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
 	* GSWeb/GSWElement.h
