--- a/README
+++ b/README
@@ -28,7 +28,7 @@ How can you help?
 Please tell me which on part which parts you want to work and
 I'll tell you if someone already works on it.
 
-GNUstepWeb maintainer: Manuel Guesdon <mguesdon@gnustepweb.org>
+GNUstepWeb maintainer: David Wetzel <dave@turbocat.de>
 
 GNUstep discussion list: <discussion@gnustep.org>
 GNUstepWeb hackers list: http://lists.turbocat.net/mailman/listinfo.cgi/gswhackers
