* GSWAdaptors/common/GSWAppConnectSocket.c         * GSWAdaptors/common/GSWUtil.c           make the old Apache Adaptor work on OpenBSD         * GSWAdaptors/Apache/mod_gsweb.c         * GSWAdaptors/Apache/GNUmakefile-Apache[1|2]x           remove all #ifdef Apache2, and remove old GNUmakefiles
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@36705 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2013-06-06: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
+	* GSWAdaptors/common/GSWAppConnectSocket.c
+	* GSWAdaptors/common/GSWUtil.c
+	  make the old Apache Adaptor work on OpenBSD
+	* GSWAdaptors/Apache/mod_gsweb.c
+	* GSWAdaptors/Apache/GNUmakefile-Apache[1|2]x
+	  remove all #ifdef Apache2, and remove old GNUmakefiles
+
+
 2013-06-02: David Wetzel <dave@turbocat.de>
 	* GSWeb/GSWMessage.m
 	  Remove warning
