--- a/ChangeLog
+++ b/ChangeLog
@@ -5,7 +5,10 @@
 	* GSWAdaptors/Apache/mod_gsweb.c
 	* GSWAdaptors/Apache/GNUmakefile-Apache[1|2]x
 	  remove all #ifdef Apache2, and remove old GNUmakefiles
-
+	* GSWAdaptors/README.txt
+	  note about Apache adaptor to work with OpenBSD Apache
+	  delete GSWAdaptors/netscape
+	
 
 2013-06-02: David Wetzel <dave@turbocat.de>
 	* GSWeb/GSWMessage.m
