remove remaining stuff in common directory
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@36714 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,7 @@
 	  do not reference the common directory anymore
 	* move files needed by the Apache adaptor from
 	  common into the Apache directory
+	* remove GSWAdaptors/common and remaining stuff in there
 
 2013-06-06: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
 	* GSWAdaptors/common/GSWAppConnectSocket.c
