* GSWeb/GSWUtils.m           do not use deprecated method, replace as suggested by warning
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@36715 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,8 @@
 	* move files needed by the Apache adaptor from
 	  common into the Apache directory
 	* remove GSWAdaptors/common and remaining stuff in there
+	* GSWeb/GSWUtils.m
+	  do not use deprecated method, replace as suggested by warning
 
 2013-06-06: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
 	* GSWAdaptors/common/GSWAppConnectSocket.c
