print 'never' and not the epoch time if there was never a response
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@36724 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-06-11: David Wetzel <dave@turbocat.de>
+	* GSWAdaptors/Apache2/mod_gsw.c
+	  print 'never' and not the epoch time if there was never a response
+
 2013-06-09: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
 	* GSWAdaptors/Apache/mod_gsweb.c
 	* GSWAdaptors/common/GNUmakefile
