* GSWeb/GSWSession.m           do not include linux/sys.h           patch by Graham Lee
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@37488 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-12-21: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
+	* GSWeb/GSWSession.m
+	  do not include linux/sys.h
+	  patch by Graham Lee
+
 2013-06-22: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
 	* GSWeb/GSWComponentRequestHandler.m
 	* GSWeb/GSWComponent.m
